<resources>
    <string name="app_name">Poopio</string>
    <string name="button_signin">Sign in</string>
    <string name="password_hint">password</string>
    <string name="email_hint">example@google.com</string>
    <string name="title_activity_overview">Overview</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="poopdetail_activity_label">Poop detail</string>
    <string name="title_activity_poop_creation">New poop</string>
    <string name="type_label">Type:</string>
    <string name="size_label">Size:</string>
    <string name="consistency_label">Consistency:</string>
    <string name="color_label">Color:</string>
    <string name="date_label">Date:</string>
    <string name="createpoop_activity_label">New poop</string>
    <string name="new_poop_save_button">Save</string>
    <string name="create_poop_cancel_button">Cancel</string>
    <string name="connectionerror_dialog_title">Connection error</string>
    <string name="connectionalert_dialog_okbutton">OK</string>
    <string name="exit_toast_text">Press one more time to exit application.</string>
    <string name="menu_item_logout">Logout</string>
    <string name="options_icon">⋮</string>
    <string name="creadits_text">Used poop icons made by Freepik from www.flaticon.com</string>
    <string name="credits_activity_label">Credits</string>
    <string name="menu_item_credits">Credits</string>
    <string name="menu_item_delete">Delete</string>
    <string name="poop_image_description">Poop image</string>
    <string name="newPoopCreated_toastText">New poop created.</string>
    <string name="login_poopio">Poopio</string>
    <string name="poop_logo">Poop logo</string>
    <string name="poop_label_time">Time</string>

    <string-array name="poop_types">
        <item>Snake</item>
        <item>Explosion</item>
        <item>Deer</item>
        <item>Floater</item>
        <item>Childbirth</item>
        <item>Titanic</item>
        <item>Kraken</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description_poop_type_image">Poop type image</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
