<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.CreatePoopActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/type_label"
            style="@style/poopdetail_label"
            android:text="@string/type_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/size_label"
            style="@style/poopdetail_label"
            android:text="@string/size_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/type_label" />

        <TextView
            android:id="@+id/consistency_label"
            style="@style/poopdetail_label"
            android:text="@string/consistency_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/size_label" />

        <TextView
            android:id="@+id/color_label"
            style="@style/poopdetail_label"
            android:text="@string/color_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/consistency_label" />

        <TextView
            android:id="@+id/date_label"
            style="@style/poopdetail_label"
            android:text="@string/date_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/color_label" />

        <Spinner
            android:id="@+id/type_spinner"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/type_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/type_label" />

        <SeekBar
            android:id="@+id/size_value"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="140dp"
            android:layout_height="20dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:clickable="false"
            android:progress="50"
            app:layout_constraintBottom_toBottomOf="@+id/size_label"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/size_label" />

        <SeekBar
            android:id="@+id/consistency_value"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="140dp"
            android:layout_height="20dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:progress="50"
            app:layout_constraintBottom_toBottomOf="@+id/consistency_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/consistency_label" />

        <com.jaredrummler.android.colorpicker.ColorPanelView
            android:id="@+id/color_value"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="16dp"
            android:onClick="selectColor"
            app:cpv_borderColor="#000000"
            app:cpv_colorShape="square"
            app:layout_constraintBottom_toBottomOf="@+id/color_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/color_label" />

        <TextView
            android:id="@+id/date_value"
            style="@style/poopdetail_textlabel"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:onClick="pickDate"
            app:layout_constraintBottom_toBottomOf="@+id/date_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/date_label" />

        <Button
            android:id="@+id/save_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="8dp"
            android:onClick="savePoop"
            android:text="@string/new_poop_save_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/time_label" />

        <TextView
            android:id="@+id/time_label"
            style="@style/poopdetail_label"
            android:text="@string/poop_label_time"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/date_label" />

        <TextView
            android:id="@+id/time_value"
            style="@style/poopdetail_textlabel"
            app:layout_constraintBottom_toBottomOf="@+id/time_label"
            app:layout_constraintEnd_toEndOf="parent"
            android:onClick="pickTime"
            app:layout_constraintTop_toTopOf="@+id/time_label" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>
